minor layout issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,7 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-headingsPrimary text-neutral-900 last:mb-0 dark:text-neutral-50 [&>strong]:text-primary-500;
+	@apply font-headingsPrimary text-neutral-900 last:mb-0 dark:text-white [&>strong]:text-primary-500;
 }
 h1 strong,
 h2 strong,
